update package. Fixes width of search box on mobile

--- a/src/less/theme.less
+++ b/src/less/theme.less
@@ -4,6 +4,10 @@
 	font-weight: 400;
 }
 
+table {
+    width: 100%;
+}
+
 #details table {
     width: 100%;
     margin-bottom: 10px;
